--- a/rjc_account_form/reports/receipt_voucher_layout.xml
+++ b/rjc_account_form/reports/receipt_voucher_layout.xml
@@ -11,7 +11,7 @@
                 <div class="col-1"/>
                 <div class="col-3">
                     <span t-field="o.name"/><br/>
-                    <span>Status :<span t-field="o.state"/></span>
+                    <span>Status : <span t-field="o.state"/></span>
                 </div>
             </div>
         </div>
@@ -39,14 +39,20 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <t t-set="column" t-value="0"/>
                         <t t-set="invoice_payment_total" t-value="0"/>
                         <t t-foreach="o.reconciled_invoice_ids" t-as="line">
+                            <t t-set="column" t-value="column + 1"/>
+                            <t t-set="type" t-value="'out_invoice'"/>
                             <t t-set="payment_widget" t-value="line._get_payments_vals()"/>
-                            <t t-set="payment_widget" t-value="line._get_payments_amount(payment_widget, o.id)"/>
-                            <t t-set="invoice_payment_total" t-value="invoice_payment_total + payment_widget.get('amount')"/>
+                            <t t-set="net_amount" t-value="line._get_payments_widget(payment_widget, o.id, 'net_amount', type)"/>
+                            <t t-set="payment_paid" t-value="line._get_payments_widget(payment_widget, o.id, 'paid', type)"/>
+                            <t t-set="payment_amount" t-value="line._get_payments_widget(payment_widget, o.id, 'amount', type)"/>
+                            <t t-set="payment_balance" t-value="net_amount - payment_amount"/>
+                            <t t-set="invoice_payment_total" t-value="invoice_payment_total + payment_amount"/>
                             <tr>
                                 <td>
-                                    <span>1</span>
+                                    <span t-esc="column"/>
                                 </td>
                                 <td>
                                     <span t-field="line.date_invoice"/>
@@ -55,15 +61,24 @@
                                     <span t-field="line.number_preprint"/>
                                 </td>
                                 <td class="text-right">
-                                    <span t-field="line.amount_total"/>
+                                    <t t-if="line.type == 'in_invoice'">
+                                        -<span t-field="line.amount_total"/>
+                                    </t>
+                                    <t t-if="line.type == 'out_invoice'">
+                                        <span t-field="line.amount_total"/>
+                                    </t>
                                 </td>
-                                <td/>
-                                <td/>
                                 <td class="text-right">
-                                    <span t-esc="payment_widget.get('amount')" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                    <span t-esc="net_amount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                 </td>
                                 <td class="text-right">
-                                    <span t-field="line.residual"/>
+                                    <span t-esc="payment_paid" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                </td>
+                                <td class="text-right">
+                                    <span t-esc="payment_amount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                </td>
+                                <td class="text-right">
+                                    <span t-esc="payment_balance" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                                 </td>
                             </tr>
                         </t>
@@ -79,15 +94,34 @@
                             </td>
                             <td/>
                         </tr>
-                        <tr>
-                            <td/><td/><td/><td/><td/>
-                            <td class="text-right">
-                                ส่วนลดจ่าย
-                            </td>
-                            <td class="text-right">
-                            </td>
-                            <td/>
-                        </tr>
+                        <t t-if="o.payment_difference_handling == 'reconcile_multi_deduct'">
+                            <t t-set="payment_multi_diff" t-value="o._get_payment_amount_multi_diff()"/>
+                            <t t-foreach="payment_multi_diff" t-as="diff_line">
+                                <tr>
+                                    <td/><td/><td/><td/><td/>
+                                    <td class="text-right">
+                                        <t t-esc="diff_line.name"/>
+                                    </td>
+                                    <td class="text-right">
+                                        <t t-esc="diff_line.amount" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                    </td>
+                                    <td/>
+                                </tr>
+                            </t>
+                        </t>
+                        <t t-if="o.payment_difference_handling == 'reconcile'">
+                            <t t-set="payment_diff" t-value="invoice_payment_total - o.amount"/>
+                            <tr>
+                                <td/><td/><td/><td/><td/>
+                                <td class="text-right">
+                                    <t t-esc="o.writeoff_label"/>
+                                </td>
+                                <td class="text-right">
+                                    <t t-esc="payment_diff" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                                </td>
+                                <td/>
+                            </tr>
+                        </t>
                         <tr>
                             <td/><td/><td/><td/><td/>
                             <td class="text-right">
