--- a/rjc_account/views/account_payment_view.xml
+++ b/rjc_account/views/account_payment_view.xml
@@ -12,4 +12,18 @@
             </xpath>
         </field>
     </record>
+
+    <record id="view_account_payment_invoice_form" model="ir.ui.view">
+        <field name="name">account.payment.invoice.form</field>
+        <field name="model">account.payment</field>
+        <field name="inherit_id" ref="account.view_account_payment_invoice_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="/form/sheet/group" position="inside">
+                <group>
+                    <field name="payment_ref"/>
+                    <field name="notes"/>
+                </group>
+            </xpath>
+        </field>
+    </record>
 </odoo>
