[FIX] account_form calculate

--- a/rjc_account_form/reports/receipt_voucher_layout.xml
+++ b/rjc_account_form/reports/receipt_voucher_layout.xml
@@ -49,7 +49,7 @@
                             <t t-set="payment_paid" t-value="line._get_payments_widget(payment_widget, o.id, 'paid', type)"/>
                             <t t-set="payment_amount" t-value="line._get_payments_widget(payment_widget, o.id, 'amount', type)"/>
                             <t t-set="payment_balance" t-value="float('%.2f' % net_amount) - float('%.2f' % payment_amount)"/>
-                            <t t-set="invoice_payment_total" t-value="float('%.2f' % invoice_payment_total) - float('%.2f' % payment_amount)"/>
+                            <t t-set="invoice_payment_total" t-value="float('%.2f' % invoice_payment_total) + float('%.2f' % payment_amount)"/>
                             <tr>
                                 <td>
                                     <span t-esc="column"/>
