--- a/account_payment_netting/views/account_invoice_view.xml
+++ b/account_payment_netting/views/account_invoice_view.xml
@@ -2,7 +2,7 @@
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
       <record id="action_invoice_all_tree" model="ir.actions.act_window">
-          <field name="name">Invoices to Netting</field>
+          <field name="name">Invoices for Netting</field>
           <field name="res_model">account.invoice</field>
           <field name="view_type">form</field>
           <field name="view_mode">tree,form</field>
