--- a/l10n_th_vendor_tax_invoice/views/account_view.xml
+++ b/l10n_th_vendor_tax_invoice/views/account_view.xml
@@ -25,4 +25,15 @@
         </field>
     </record>
 
+    <record id="view_tax_form" model="ir.ui.view">
+        <field name="name">account.tax.form.inherit</field>
+        <field name="model">account.tax</field>
+        <field name="inherit_id" ref="account.view_tax_form"/>
+        <field name="arch" type="xml">
+            <field name="cash_basis_base_account_id" position="replace">
+                <field name="cash_basis_base_account_id" attrs="{'invisible': [('tax_exigibility', '=', 'on_invoice')]}" groups="account.group_account_user"/>
+            </field>
+        </field>
+    </record>
+
 </odoo>
