--- a/rjc_account/views/account_payment_view.xml
+++ b/rjc_account/views/account_payment_view.xml
@@ -5,10 +5,15 @@
         <field name="inherit_id" ref="account.view_account_payment_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='payment_date']" position="after">
+                <field name="value_date"/>
                 <field name="payment_ref"/>
             </xpath>
             <xpath expr="//field[@name='journal_id']" position="after">
+                <field name="cheque_no"/>
                 <field name="notes"/>
+            </xpath>
+            <xpath expr='//group[2]' position="inside">
+                <field name="validate_by"/>
             </xpath>
         </field>
     </record>
@@ -19,9 +24,13 @@
         <field name="inherit_id" ref="account.view_account_payment_invoice_form"/>
         <field name="arch" type="xml">
             <xpath expr="/form/sheet/group/group[1]" position="inside">
+                <field name="cheque_no"/>
                 <field name="payment_ref"/>
                 <field name="notes"/>
             </xpath>
+            <field name="payment_date" position="after">
+                <field name="value_date"/>
+            </field>
         </field>
     </record>
 
@@ -31,9 +40,13 @@
         <field name="inherit_id" ref="account.view_account_payment_from_invoices"/>
         <field name="arch" type="xml">
             <xpath expr="/form/group/group[1]" position="inside">
+                <field name="cheque_no"/>
                 <field name="payment_ref"/>
                 <field name="notes"/>
             </xpath>
+            <field name="payment_date" position="after">
+                <field name="value_date"/>
+            </field>
         </field>
     </record>
 </odoo>
