--- a/rjc_account_form/static/scss/style_account_report.scss
+++ b/rjc_account_form/static/scss/style_account_report.scss
@@ -29,7 +29,16 @@
     }
     // style payment voucher
     .payment_voucher_form {
+        thead {
+            background-color: whitesmoke;
+        }
         tfoot {
+            tr td {
+                border-top: none;
+            }
+            tr .border-black td {
+                border-top: 1px solid black !important;
+            }
             background-color: whitesmoke;
         }
         .line_dot {
